export enum AlertaTemperatura {
    NORMAL,
    ALTA,
}
