export enum ESTADO_REACTOR {
    APAGADO,
  	NORMALIDAD,
  	CRITICIDAD,
  	CRITICA
}