@startuml DiagramaReactor

enum EstadoReactor {
  	APAGADO
  	NORMALIDAD
  	CRITICIDAD
  	CRITICA
}

enum AlertaTemperatura {
	NORMAL
	ALTA
}

abstract class CombustibleNuclear {
  	# cantidad: number
  	# limite: number

  	+ recargar(cantidad: number): void
  	+ {abstract} consumir(cantidad: number): number
  	+ tieneCombustible(): boolean
  	+ {abstract} calcularEnergiaTermica(cantidad: number): number
}

class Uranio extends CombustibleNuclear {
  	+ consumir(cantidad: number): number
  	+ calcularEnergiaTermica(cantidad: number): number
}

abstract class SistemaRegulacionTermica {
    # encendido: boolean

    + encender(): void
    + apagar(): void
    + {abstract} controlarEnergiaTermica(energiaTermica: number): number
}

class BarraDeControl extends SistemaRegulacionTermica {
    - vidaUtil: number

    + controlarEnergiaTermica(energiaTermica: number): number
	- consumirVidaUtil(): void
    - getPorcentajeReduccion(): number
}

class SensorTermico {
	- temperatura: number
	- computadora: Computadora

  	+ medir(): number
	- enviarAlertaTemperatura(alerta: AlertaTemperatura): void
}

class Computadora {
  	- sistemaRegulacionTermica: SistemaRegulacionTermica

  	+ recibirAlertaTemperatura(): void
  	- activarModoEnfriamiento(): void
}

class Reactor {
	- consumoCombustible: number
	- capacidadProductiva: number
	- energiaTermica: number
	- estado: EstadoReactor
	- combustible: CombustibleNuclear
	- sistemaRegulacionTermica: SistemaRegulacionTermica
	- sensor: SensorTermico

	+ iniciar(): void
	+ mantener(): void
	+ detener(): void
	+ generarEnergiaTermica(): number
	- reducirEnergiaTermica(): void
	- calcularCapacidadProductiva(): void
	- controlarEstado(): void
	- consumirCombustible(cantidad: number): void
	- controlarEnergiaTermica(energiaTermica: number): number
}

class Generador {
	+ generarEnergiaElectrica(energiaTermica: number): number
}

class CentralNuclear {
	- reactor: Reactor
	- generador: Generador

	+ generarEnergia(): number
}

' relaciones

Reactor *-r- CombustibleNuclear
Reactor *-- SensorTermico
Reactor *-l- SistemaRegulacionTermica

Computadora *-l- SistemaRegulacionTermica
SensorTermico *-- Computadora

CentralNuclear *-- Reactor
CentralNuclear *-l- Generador

@enduml